# ebpf_benchmark

./: LICENSE  Makefile  README.md  RESULTS.md  Vagrantfile  generate_benchmark_charts.py  generate_benchmark_report.py  provision.sh  requirements.txt  run_all_benchmarks.py  run_all_benchmarks.sh
analysis/: __init__.py
analysis/scripts/: __init__.py  generate_plots.py  process_results.py
benchmarks/configs/: benchmark_config.yaml
benchmarks/harness/: __init__.py  runner.py
benchmarks/results/: go_result.json  mock_results.json  report.html  report.txt
docs/: EBPF_PROGRAM_TYPES.md  GETTING_STARTED.md
scripts/: run_docker_benchmark.sh  run_vagrant_benchmark.sh  vagrant_run.sh
src/c/: Makefile
src/c/headers/: benchmark.h
src/c/programs/: map_operations.c  perfbuf_throughput.c  ringbuf_throughput.c
src/golang/: common.go  go.mod  ringbuf_throughput.go
src/python/: __init__.py  common.py  ringbuf_throughput.py
src/rust/: Cargo.toml
src/rust/kernel/: Cargo.toml
src/rust/kernel/src/: ringbuf_throughput.rs
src/rust/userspace/: Cargo.toml
src/rust/userspace/src/: ringbuf_throughput.rs
