[package]
name = "ebpf-benchmark-userspace"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = "0.13"
aya-log = "0.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[[bin]]
name = "ringbuf_throughput"
path = "src/ringbuf_throughput.rs"
